[gd_scene load_steps=11 format=3 uid="uid://dv8psq042rwo4"]

[ext_resource type="Script" path="res://src/main_menu_ui/main_menu_ui.gd" id="1_0cp5y"]
[ext_resource type="PackedScene" uid="uid://baxalna5x1h17" path="res://src/fun_label/fun_label.tscn" id="2_ou4u1"]
[ext_resource type="Texture2D" uid="uid://djxwduby451m6" path="res://splash-transparent.png" id="2_y63jx"]
[ext_resource type="Texture2D" uid="uid://7fwwd4eiwro1" path="res://splash-screen-musli.png" id="3_uicg6"]
[ext_resource type="Texture2D" uid="uid://i3ah4mid1dw6" path="res://cute_eyes.png" id="4_5ctxx"]
[ext_resource type="PackedScene" uid="uid://dd7i3sukpwn0m" path="res://src/chaos_slider/chaos_slider.tscn" id="6_x5b6b"]

[sub_resource type="Theme" id="Theme_thina"]
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_outline_color = Color(0.298039, 0, 0.313726, 1)
Label/constants/outline_size = 10
Label/font_sizes/font_size = 18

[sub_resource type="Animation" id="Animation_ow1ib"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/yhee:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/bobapop:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(289.684, 100)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/bobapop:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/cute_eyes:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Control/cute_eyes:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(64, 58)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Control/cute_eyes:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Control/yhee:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_pmtt7"]
resource_name = "yhee_yoobubbles"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/yhee:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.0872665, 0.0872665, -0.0872665]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/bobapop:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(289.684, 100), Vector2(280.716, 90), Vector2(289.684, 100)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/bobapop:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0523599, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/cute_eyes:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0698132, 0.226893, 0.0698132]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Control/cute_eyes:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(35, 55), Vector2(30, 54), Vector2(35, 55)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Control/cute_eyes:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Control/yhee:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d0xp1"]
_data = {
"RESET": SubResource("Animation_ow1ib"),
"yhee_yoobubbles": SubResource("Animation_pmtt7")
}

[node name="MainMenuUI" type="Control"]
custom_minimum_size = Vector2(100, 150)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -75.0
offset_right = 50.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0cp5y")

[node name="Credits" type="Control" parent="."]
custom_minimum_size = Vector2(375, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -187.0
offset_top = -112.0
offset_right = 188.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_thina")

[node name="FunLabel" parent="Credits" instance=ExtResource("2_ou4u1")]
layout_mode = 0

[node name="FunLabel2" parent="Credits" instance=ExtResource("2_ou4u1")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -94.0
offset_right = 0.0
offset_bottom = 26.0
grow_horizontal = 0
text = "domenukk"

[node name="FunLabel3" parent="Credits" instance=ExtResource("2_ou4u1")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -26.0
offset_right = 70.0
offset_bottom = 0.0
grow_vertical = 0
text = "balidani"

[node name="FunLabel4" parent="Credits" instance=ExtResource("2_ou4u1")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -83.0
offset_top = -26.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 0
grow_vertical = 0
text = "whendrik"

[node name="Control" type="Control" parent="Credits"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = 8.985
offset_right = 20.0
offset_bottom = 48.985
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="Credits/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.5
offset_top = -13.0
offset_right = 102.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 13
text = "Game assets by Kenney
Synth by GDSiON"
horizontal_alignment = 1

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = -39.67
offset_right = 20.0
offset_bottom = 0.330002
grow_horizontal = 2
scale = Vector2(1.5, 1.5)

[node name="bobapop" type="TextureRect" parent="Control"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -144.842
offset_right = 144.842
offset_bottom = 100.0
grow_horizontal = 2
pivot_offset = Vector2(144.5, 50)
texture = ExtResource("2_y63jx")
expand_mode = 3
stretch_mode = 5

[node name="yhee" type="TextureRect" parent="Control"]
custom_minimum_size = Vector2(125, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.614
anchor_right = 0.5
anchor_bottom = 0.614
offset_left = -62.5
offset_top = 42.44
offset_right = 62.5
offset_bottom = 92.44
grow_horizontal = 2
pivot_offset = Vector2(62, 25)
texture = ExtResource("3_uicg6")
expand_mode = 5
stretch_mode = 5

[node name="cute_eyes" type="TextureRect" parent="Control"]
custom_minimum_size = Vector2(40, 20)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.614
anchor_right = 0.5
anchor_bottom = 0.614
offset_left = 44.0
offset_top = 33.44
offset_right = 93.0071
offset_bottom = 53.44
grow_horizontal = 2
pivot_offset = Vector2(24, 10)
texture = ExtResource("4_5ctxx")
expand_mode = 3
stretch_mode = 5

[node name="Control2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -74.0
offset_top = -31.0
offset_right = 78.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 0

[node name="ChaosSlider" parent="Control2" instance=ExtResource("6_x5b6b")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control2"]
layout_mode = 2
alignment = 1

[node name="Play" type="Button" parent="Control2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Play"

[node name="Quit" type="Button" parent="Control2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Don't play"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d0xp1")
}

[connection signal="chaos_changed" from="Control2/ChaosSlider" to="." method="_on_chaos_slider_chaos_changed"]
[connection signal="pressed" from="Control2/HBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Control2/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
